--- a/test/mobile.html
+++ b/test/mobile.html
@@ -63,9 +63,7 @@
 	
 	<a id="next" href="mobile2.json">next page?</a>
 
-	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.6.1/jquery.js"></script>
-	<script>window.jQuery || document.write("<script src='jquery-1.6.1.js'>\x3C/script>")</script>
-	
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 	<script src="debug.js"></script>
 	<script src="../jquery.infinitescroll.js"></script>
 	<script src="../behaviors/manual-trigger.js"></script>
